fix(ui): Update favicon link and adjust logo styles for better alignment

--- a/controle-animalAPI/controle-animal/src/main/resources/static/styles.css
+++ b/controle-animalAPI/controle-animal/src/main/resources/static/styles.css
@@ -87,6 +87,9 @@ h2 {
 }
 
 .logo--projeto {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     width: 25px;
     height: 22px;
 }
